--- a/extra/efivar/README
+++ b/extra/efivar/README
@@ -1,1 +1,37 @@
-../../modules/repo/extra/efivar/README
+efivar
+________________________________________________________________________________
+
+Tools and libraries to work with EFI variables [0]
+
+Upstream: https://github.com/kissllm/efivar
+
+
+[000] Index
+________________________________________________________________________________
+
+* Installation ........................................................... [001]
+* Usage .................................................................. [002]
+* References ............................................................. [003]
+
+
+[001] Installation
+________________________________________________________________________________
+
++------------------------------------------------------------------------------+
+|                                                                              |
+|  $ kiss b efivar                                                             |
+|                                                                              |
++------------------------------------------------------------------------------+
+
+
+[002] Usage
+________________________________________________________________________________
+
+Refer to the manual pages for more information.
+
+
+[003] References
+________________________________________________________________________________
+
+[0] https://github.com/kissllm/efivar
+[1] https://github.com/rhboot/efivar
